@@ -30,6 +30,7 @@
  * 02/13/2017      RC          4.5.1      Fixed Display All data.
  * 08/31/2017      RC          4.5.2      Added Ship Velocity to Bottom Track and Water Track.
  * 08/29/2018      RC          4.12.2     Verify _eventWaitHandler is not null in DisplayData().
+ * 08/31/2018      RC          4.12.3     Fixed bug in Handle when checking for NULL.
  * 
  */
 namespace RTI
@@ -3590,7 +3591,7 @@ namespace RTI
         public override void Handle(EnsembleEvent ensEvent)
         {
             // Check if source matches this display
-            if (_Config != null || ensEvent != null || _Config.Source != ensEvent.Source || ensEvent.Ensemble == null)
+            if (_Config == null || ensEvent == null || _Config.Source != ensEvent.Source || ensEvent.Ensemble == null)
             {
                 return;
             }
