@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 4.12.1 ChangeLog</title>
+		<title>Version 4.12.3 ChangeLog</title>
 		<style type="text/css">
             .auto-style1 {
 	            text-decoration: underline;
@@ -10,7 +10,15 @@
 	</head>
 	<body>
         <p>
-            <br /><span class="auto-style1">Pulse-4.11.5</span>
+            <br /><span class="auto-style1">Pulse-4.12.3</span>
+            <br />  Pulse-4.12.3
+            <br />  * In ViewDataDvlViewModel, fixed bug in Handle when checking for NULL.
+            <br />  - Cleaned up the DVL View.
+            <br />
+            <br />  Pulse-4.12.2
+            <br />  * In ViewDataGraphicalViewModel, verify _eventWaitHandler is not null in DisplayData().
+            <br />  * In ViewDataDvlViewModel, verify _eventWaitHandler is not null in DisplayData().
+            <br />
             <br />  Pulse-4.12.1
             <br />  * In HeatmapPlotViewModel, fixed InterPlote flag to only change HeatmapPlotSeries.
             <br />  * Check _eventWaitData is closed for calling set.
@@ -99,7 +107,10 @@
             <br />   - In PredictionModel, fix bug in GetBurstDataStorage() when calculating number of burst per deployment.
             <br />   - In PredictionModel, fix bug in CalculatePowerBurst() when calculating number of burst per deployment.
             <br />
-            <br /><span class="auto-style1">Pulse-Display-4.10.2</span>
+            <br /><span class="auto-style1">Pulse-Display-4.11.0</span>
+            <br />   Pulse-Display-4.11.0
+            <br />   * Check for null in Event Handler for EnsEvent in ValidationTestViewModel.
+            <br />
             <br />   Pulse-Display-4.10.2
             <br />   * In PredictionModel, fixed bug with Narrowband Max Velocity.
             <br />   * In PredictionModel, updated the number of elements in E0000014.
@@ -167,12 +178,17 @@
             <br />   - In ScreenDataViewModel, added FillInMissingWpData() to fill in data when Water Profile is turned off.
             <br />   - Change the images in PlaybackView.xaml to VisualBrushes.  This decreased startup time dramatically.
             <br />   - In DistanceTraveled, in AccumulateGps() verify a good _FirstGpsPos is set.
-            <br /><span class="auto-style1">RTI-3.4.9</span>
+            <br /><span class="auto-style1">RTI-3.4.10</span>
+            <br />   RTI-3.4.10
+            <br />   * In RemoveShipSpeed, in RemoveVelocityInstrument, check if the Instrument Velocity exist instead of Earth.
+            <br />   * In PD4_5Codec, check if the buffer has at least 1 byte when removing, in SearchForHeaderStart().
+            <br />
             <br />   RTI-3.4.9
             <br />   * In Pd0BottomTrack, inverted the sign of the Bottom Track Velocity when converting from RTI to PD0.
             <br />   * In AdcpDatabaseWriter, verify _eventWaitData is safe to use before setting.
             <br />   * Check _eventWaitData is closed for calling set.
             <br />   * Added SyncRoot to Ensemble to lock it when modifying it.
+            <br />   * In AdcpBinaryCodecNew, fixed bug with miss spelling of _incomingBufferLock as _incomingBuffer.  Then fixed thread handling of data.
             <br />
             <br />   RTI-3.4.8
             <br />   * In AdcpSubsystemCommands, changed the CepoIndex in the command to a Hex value.
